# tuerpie

./: .env  Cargo.toml  Makefile  README.md  build.sh  shell.nix
.github/workflows/: main.yml
src/: main.rs
